traefik/traefik-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: tcp
      protocol: TCP
      port: 25565
      allowedRoutes:
        namespaces:
          from: All
    - name: http-rcon
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: All
